# QubitPulseOpt

./: .READY_TO_PUSH.txt  .commit_summary.txt  .coverage  .flake8  .gitignore  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HARDWARE_REFERENCE.md  LICENSE  PHASE_2_2_DECOMPOSITION_PLAN.md  PHASE_2_2_PRIORITY_1_COMPLETE.md  PHASE_2_2_PRIORITY_2_COMPLETE.md  PHASE_2_2_SESSION_SUMMARY.md  PHASE_2_PROGRESS.md  QUICKSTART.md  README.md  SUBMISSION_CHECKLIST.md  Scope of Work_ Quantum Controls Simulation Project.md  TASK_7_PHASE_4_PREEXISTING_FAILURES.md  TASK_7_PHASE_STATUS.md  TASK_7_SUMMARY.md  TEST_COVERAGE_80_PLAN.md  TEST_COVERAGE_PROGRESS.md  TEST_FIX_PROGRESS.md  VERIFICATION_SUMMARY.md  WORKFLOW_FIXES.md  compliance_baseline.json  environment.yml  generate_figures.py  phase1_demo.py  phase2_demo.py  phase4_demo.py  preprint.tex  preprint_original_backup.tex  pyproject.toml  pytest.ini  requirements-dev.txt  (+2 more)
.github/: WORKFLOW_STATUS.md
.github/workflows/: compliance.yml  docs.yml  fast-tests.yml  full-tests.yml  lint.yml  notebooks.yml  pre-commit.yml  tests.yml
agent_logs/: init_log.json
config/: default_config.yaml
docs/: DEVELOPER_GUIDE_PRECOMMIT.md  IQM_SDK_INSTALLATION.md  PHASE_1.1-1.2_COMPLETE.md  PHASE_1.3_COMPLETE.md  PHASE_2_2_FINAL_SUMMARY.md  PHASE_2_2_P3_P4_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_2_REFINEMENTS_COMPLETE.md  PHASE_2_REFINEMENTS_SUMMARY.md  PHASE_2_REFINEMENTS_WORKPLAN.md  PHASE_3_STATUS.md  PHASE_3_WORKPLAN.md  PORTFOLIO_CONNECTIONS.md  POWER_OF_10_BASELINE.md  PRECOMMIT_MIGRATION_GUIDE.md  PROJECT_STATUS_AND_REMAINING_WORK.md  REMAINING_TASKS_CHECKLIST.md  REVIEW_SUMMARY.md  SOCIAL_MEDIA_ANNOUNCEMENTS.md  Scope of Work_ Quantum Controls Simulation Project.md  TASK_3_SUMMARY.md  TASK_5_SUMMARY.md  TASK_6_SUMMARY.md  TASK_7_PHASE_1_COMPLETE.md  TASK_7_PROGRESS.md  TASK_7_RULE_COMPLIANCE_FINAL.md  TECHNICAL_SUPPLEMENT.md  powerof10.md  technical_report.aux  technical_report.out  technical_report.tex  technical_report.toc
docs/archive/: CATEGORIES_5_6_COMPLETE.md  CATEGORIES_5_6_SUMMARY.txt  CI_CD_QUICKREF.md  GIT_ROLLBACK_ANALYSIS.md  PRECOMMIT_QUICKREF.md  README.md  REMAINING_TASKS_CHECKLIST.md  SETUP_COMPLETE.md  SETUP_STATUS_SUMMARY.md  TASK_1_5_COMPLETION_SUMMARY.md  TASK_1_5_QUICK_REFERENCE.md  TASK_1_SUMMARY.md  TASK_2_SUMMARY.md  TASK_4_4_COMPLETE.txt  TASK_4_4_COMPLETION_SUMMARY.md  TASK_4_4_EXECUTIVE_SUMMARY.md  TASK_4_4_FILES.md  TASK_4_CICD_COMPLETE.md  TASK_4_COMPLETION_SUMMARY.txt  TASK_4_SUMMARY.md  TASK_7_POWER_OF_10_CLEANUP.md  TASK_7_PROGRESS.md
docs/science/: quantum_control_theory.aux  quantum_control_theory.fdb_latexmk  quantum_control_theory.fls  quantum_control_theory.out  quantum_control_theory.tex  quantum_control_theory.toc
examples/: phase3_demo.py  task3_demo.py  task4_demo.py  task6_demo.py
examples/demo_materials/: README.md
examples/task4_output/: method_comparison.tex  pulse_metrics.csv  pulse_metrics.json  pulse_metrics.tex
examples/task6_output/: custom_config.yaml  diagnostics.json  grape_diagnostics.json  optimization_result.json  pulse_export.csv  pulse_export.json  pulse_export.npz
hardware_validation_results/: HARDWARE_FIDELITY_REPORT.md
notebooks/: 01_drift_dynamics.ipynb  02_rabi_oscillations.ipynb  03_decoherence_and_lindblad.ipynb  04_advanced_pulse_shaping.ipynb  05_gate_optimization.ipynb  06_robustness_analysis.ipynb  07_visualization_gallery.ipynb  08_end_to_end_workflow.ipynb
notebooks/hardware/: 01_phase1_hardware_handshake.ipynb  02_phase2_characterization.ipynb
paper/arxiv_v1/: preprint_backup_pre_corrections.tex
paper/ieee_tqe/: cover_letter.tex  main.tex  main_full.tex  main_full_extended.tex
paper/pra/: cover_letter.tex  main.tex  references.bib
paper/quantum/: abstract.txt  arxiv_v3_metadata.tex
preprint/: arxiv_submission_README.txt  preprint.tex
results/drag_vs_grape/: benchmark_20260207_202538.json
results/error_budget/: error_budget_20260207_203830.json  error_budget_combined_20260207_203843.json
results/multilevel_comparison/: 3level_xgate_20260207_202907.json
results/robustness/: robustness_20260207_203855.json
scripts/: activate_env.sh  apply_preprint_corrections.py  benchmark_drag_vs_grape.py  experiment_3level_comparison.py  experiment_criticality.py  experiment_error_budget.py  experiment_robustness.py  generate_demo_materials.py  generate_figures.py  generate_pra_figures.py  hardware_validation_async.py  profile_performance.py  query_iqm_calibration.py  run_preprint_verification.py  run_simple_verification.py  setup_dev_env.sh  test_env_simple.py  update_preprint_verified.py  update_preprint_with_verified_data.py  validate_setup.sh  verify_drift_evolution.py  verify_grape_performance.py
scripts/compliance/: __init__.py  power_of_10_checker.py
src/: __init__.py  config.py  constants.py  logging_utils.py  phase3_grape_wrapper.py  rl_env.py  train_agent.py
src/analysis/: criticality.py
src/hamiltonian/: __init__.py  control.py  drift.py  evolution.py  lindblad.py  stochastic.py
src/hardware/: README.md  __init__.py  characterization.py  iqm_backend.py  iqm_translator.py
src/io/: __init__.py  export.py
src/optimization/: __init__.py  benchmarking.py  compilation.py  filter_functions.py  gates.py  grape.py  krotov.py  robustness.py
src/pulses/: README.md  __init__.py  adiabatic.py  composite.py  drag.py  shapes.py
src/visualization/: README.md  (+4 more)
tests/: README_TESTING.md  __init__.py  conftest.py
verified_results/: DECOHERENCE_NOTE.md  PROVENANCE.md  decoherence_evaluation_results.json  gaussian_baseline_results.json  grape_optimization_results.json  hardware_parameters.json  iqm_calibration_data.json  parameter_sweep_results.json
(+39 files in other folders)
