[metadata]
name = qubitpulseopt
version = 1.0.0
description = Optimal pulse engineering for single-qubit gates with quantum control theory
long_description = file: README.md
long_description_content_type = text/markdown
author = QubitPulseOpt Development Team
license = MIT
keywords = quantum, control, optimization, qutip, grape, pulse-engineering
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    qutip>=4.8.0
    numpy>=1.24
    scipy>=1.10
    matplotlib>=3.7

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.3
    pytest-cov>=4.1
    pytest-rerunfailures>=12.0
    black>=24.1
    flake8>=7.0
    isort>=5.13
    pre-commit>=3.5
    flake8-docstrings
    flake8-bugbear
notebooks =
    jupyter>=1.0
    ipykernel
docs =
    sphinx>=7.0
    sphinx-rtd-theme
